--- a/content/publication/weakly-singular-symmetric-galerkin-boundary-element-method-for-fracture-analysis-of-three-dimensional-structures-considering-rotational-inertia-and-gravitational-forces/cite.bib
+++ b/content/publication/weakly-singular-symmetric-galerkin-boundary-element-method-for-fracture-analysis-of-three-dimensional-structures-considering-rotational-inertia-and-gravitational-forces/cite.bib
@@ -5,8 +5,8 @@
   year = {2022},
   journal = {Computer Modeling in Engineering \& Sciences},
   volume = {131},
-  number = {1},
-  pages = {1--27},
+  number = {3},
+  pages = {1857-1882},
   issn = {1526-1506},
   doi = {10.32604/cmes.2022.019160},
   abstract = {The Symmetric Galerkin Boundary Element Method is advantageous for the linear elastic fracture and crackgrowth analysis of solid structures, because only boundary and crack-surface elements are needed. However, for engineering structures subjected to body forces such as rotational inertia and gravitational loads, additional domain integral terms in the Galerkin boundary integral equation will necessitate meshing of the interior of the domain. In this study, weakly-singular SGBEM for fracture analysis of three-dimensional structures considering rotational inertia and gravitational forces are developed. By using divergence theorem or alternatively the radial integration method, the domain integral terms caused by body forces are transformed into boundary integrals. And due to the weak singularity of the formulated boundary integral equations, a simple Gauss-Legendre quadrature with a few integral points is su cient for numerically evaluating the SGBEM equations. Some numerical examples are presented to verify this approach and results are compared with benchmark solutions.},
