--- a/i18n/zh.yaml
+++ b/i18n/zh.yaml
@@ -7,9 +7,9 @@
 - id: back_to_top
   translation: 回到顶部
 - id: home
-  translation: Home
+  translation: 主页
 - id: close
-  translation: Close
+  translation: 关闭
 - id: languages
   translation: 语言
 - id: related
@@ -57,7 +57,7 @@
 - id: btn_download
   translation: 下载
 - id: interests
-  translation: 兴趣爱好
+  translation: 研究方向
 - id: education
   translation: 教育经历
 - id: user_profile_latest
@@ -127,9 +127,9 @@
 - id: projects
   translation: 项目
 - id: slides
-  translation: Slides
+  translation: 演示文稿
 - id: authors
-  translation: Authors
+  translation: 作者
 - id: search
   translation: 搜索
 - id: search_placeholder
@@ -139,7 +139,7 @@
 - id: search_no_results
   translation: 没有找到结果
 - id: search_common_queries
-  translation: 经常搜寻
+  translation: 常用搜索
 - id: page_not_found
   translation: 找不到页面
 - id: 404_recommendations
