--- a/content/en/publication/aiaaj2022a/cite.bib
+++ b/content/en/publication/aiaaj2022a/cite.bib
@@ -1,10 +1,12 @@
 @article{zhouClusterBasedJointDistribution2022,
   title = {Cluster-{{Based Joint Distribution Adaptation Method}} for {{Debonding Quantification}} in {{Composite Structures}}},
   author = {Zhou, Xuan and Oboe, Daniele and Poloni, Dario and Sbarufatti, Claudio and Dong, Leiting and Giglio, Marco},
-  year = {2022},
-  month = nov,
+  year = {2023},
+  month = jan,
   journal = {AIAA Journal},
-  pages = {1--12},
+  volume = {61},
+  number = {2},
+  pages = {831--842},
   publisher = {{American Institute of Aeronautics and Astronautics}},
   issn = {0001-1452},
   doi = {10.2514/1.J062417},
