--- a/content/en/publication/aiaaj2024/cite.bib
+++ b/content/en/publication/aiaaj2024/cite.bib
@@ -1,14 +1,15 @@
-@article{xuVariationalNeuralNetwork2024,
-  title = {Variational {{Neural Network Embedded}} with {{Digital Twins}} for {{Probabilistic Structural Damage Quantification}}},
-  author = {Xu, Jiaqi and Zhou, Xuan and Giglio, Marco and Sbarufatti, Claudio and Dong, Leiting},
-  year = {2024},
+@article{zhaoBSplineSurfaceBasedReducedOrder2023,
+  title = {B-{{Spline Surface-Based Reduced-Order Modeling}} of {{Nonplanar Crack Growth}} in {{Structural Digital Twins}}},
+  author = {Zhao, Fubin and Zhou, Xuan and He, Shuangxin and Wang, Chaoyang and Dong, Leiting and Atluri, Satya N.},
+  year = {2023},
+  month = oct,
   journal = {AIAA Journal},
-  volume = {0},
-  number = {0},
-  pages = {1--13},
+  pages = {1--14},
   publisher = {{American Institute of Aeronautics and Astronautics}},
   issn = {0001-1452},
-  doi = {10.2514/1.J064808},
-  urldate = {2024-12-17},
-  abstract = {Quantifying structural damage using online monitoring data is crucial for condition-based maintenance to ensure aviation safety. However, most data-driven methods hardly use accumulated domain knowledge, making it difficult to address parameter variability across different structures due to manufacturing as well as compromising result interpretability. To address these challenges, this study proposes a physics-decoded variational neural network for structural damage quantification and model parameter calibration. The innovation of this method lies in seamlessly integrating a reduced-order digital twin containing damage states and influencing parameters as a decoder within the variational neural network and training a data-driven physical feature extraction model using the variational inference. This architecture enables the individualized, real-time structural damage quantification and parameter calibration across an entire fleet, while accounting for uncertainties. Validation on typical damaged aeronautical panels demonstrates that the proposed method accurately predicts structural damage states and quantifies associated uncertainties, thereby ensuring high interpretability and accuracy. This approach is expected to be integrated into the airframe digital twin framework to enable condition-based maintenance across a fleet.},
+  doi = {10.2514/1.J062959},
+  urldate = {2023-10-19},
+  abstract = {Nonplanar crack growth holds a critical role in aeronautical structures, necessitating effective analysis under mixed fatigue loading to assess structural integrity. This study introduces a reduced-order modeling (ROM) method for predicting nonplanar crack growth in structural digital twins. The method's advantage lies in its representation of the entire crack surface morphology using a B-spline surface, which better captures its impact on crack growth. The symmetric Galerkin boundary element method\textendash finite element method coupling method is adopted as a full-order method to generate the crack database. Isoparametric coordinates of the crack surface and stress intensity factor serve as input and output, respectively, for training the ROM, which integrates K-means clustering, principal component analysis, and Gaussian process regression. The proposed approach is demonstrated using a rotorcraft-mast-like component. Results reveal superior fracture mechanics parameter prediction compared to the crack-front-based ROM. Furthermore, the method boasts three orders of magnitude greater efficiency than full-order simulation, enabling its coupling with approaches like Monte Carlo for probabilistic crack growth analysis. Future work entails integrating our method into the probabilistic framework of digital twins.},
+  copyright = {All rights reserved},
+  keywords = {Crack Growth,Digital Engineering,Digital Twins,Linear Elastic Fracture Mechanics,Machine Learning,Monte Carlo Simulation,Reduced Order Modelling,Rotorcrafts,Structural Analysis,Structural Integrity},
 }
